@@ -15,6 +15,10 @@ http://www.wjduquette.com/snit for details).
 Changes in V0.94
 --------------------------------------------------------------------
 
+PLEASE NOTE: V0.94 is the current development version.  All tests
+pass, or I wouldn't have checked in the code, but I'm still making
+changes (and checking them in).  Use V0.93 instead.
+
 * Snit method invocation (both local and delegated) has been 
   optimized by the addition of a "method cache".  The primary
   remaining cost in method invocation is the cost of declaring
@@ -29,6 +33,8 @@ Changes in V0.94
 
 * Added the "myvar" and "mytypevar" commands.  "varname" is now
   deprecated.
+
+* Added ::snit::macro.
 
 * Sundry internal changes.
 
