@@ -1,6 +1,17 @@
 2004-05-29  Will Duquette  <will@wjduqette.com>
 
 	* snit.tcl      Moved Snit_component to snit::Component.
+	                
+	                Removed the "type" argument from all of the
+			"Type.*" procs.  Instead, the compilation type
+			is available as $compile(type).  Consequently,
+			the Type.* procs can now be aliased into the
+			compiler just once, instead of with every type
+			definition.  (Did that.)
+
+			Defined snit::macro.
+
+	* snit.test     Added tests for snit::macro.
 
 2004-05-15  Will Duquette  <will@wjduquette.com>
 
