@@ -1,3 +1,7 @@
+2004-05-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* mpexpand.man: Updated reference 'dtformat' to 'doctools_fmt'.
+
 2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* doctools.tcl: Updated version number to distinguish from the
